modifying the companies emails list for more easy usage.

--- a/ScrapingCompaniesEmailsForStage.ipynb
+++ b/ScrapingCompaniesEmailsForStage.ipynb
@@ -6,7 +6,7 @@
       "name": "ScrapingCompaniesEmailsForStage.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMX275qFQj0hcOBQ24VDdU+"
+      "authorship_tag": "ABX9TyMdDADbrc3p6MvOkMiv/SYe"
     },
     "kernelspec": {
       "name": "python3",
@@ -27,7 +27,7 @@
         "from bs4 import BeautifulSoup\n",
         "import csv"
       ],
-      "execution_count": 208,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -44,7 +44,7 @@
         "collection = list(soup.find_all(\"p\", {\"class\": None}))\n",
         "collection = collection #list of p"
       ],
-      "execution_count": 209,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -74,16 +74,26 @@
         "    # if email company\n",
         "    else:\n",
         "      if len(data_dict[\"company_emails\"]) != 0:\n",
-        "        final_data.append(data_dict)\n",
+        "        data_dict_end = {\n",
+        "            \"company_name\":data_dict[\"company_name\"],\n",
+        "            \"company_emails\":data_dict[\"company_emails\"][0]\n",
+        "        }\n",
+        "        final_data.append(data_dict_end)\n",
         "        data_dict = {\n",
         "        \"company_name\":span_element.get_text(),\n",
         "        \"company_emails\":[]\n",
         "        }\n",
         "      else:\n",
         "        data_dict[\"company_name\"] = span_element.get_text()\n",
-        "  final_data.append(data_dict)"
+        "  data_dict_end = {\n",
+        "      \"company_name\":data_dict[\"company_name\"],\n",
+        "      \"company_emails\":\"\"\n",
+        "      }\n",
+        "  if len(data_dict[\"company_emails\"]) > 0:\n",
+        "    data_dict_end[\"company_emails\"] = data_dict[\"company_emails\"][0]\n",
+        "  final_data.append(data_dict_end)"
       ],
-      "execution_count": 210,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -93,17 +103,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6bf6995e-a97a-46d0-e7f3-3a9b04d58bc4"
+        "outputId": "168f57af-9346-4020-a331-7bd8963db165"
       },
       "source": [
         "keys = final_data[0].keys()\n",
-        "with open('company_emails_stage.csv', 'w', newline='')  as my_csv_file:\n",
+        "with open('company_emails_stage_end.csv', 'w', newline='')  as my_csv_file:\n",
         "    dict_writer = csv.DictWriter(my_csv_file, fieldnames=keys)\n",
         "    dict_writer.writeheader()\n",
         "    dict_writer.writerows(final_data)\n",
         "print(\"done\")"
       ],
-      "execution_count": 211,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,6 +123,17 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eI6ym6w5MjUy"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
